# alliance

alliance/: CHANGELOG.rst  CMakeLists.txt  README.md  mrta.xml  package.xml  rqt_mrta.xml
alliance/config/: rqt_multiplot.xml
alliance/include/alliance/: acquiescence.h  activity_suppression.h  alliance.h  behaved_robot.h  behaviour_set.h  behaviour_set_interface.h  impatience.h  impatience_reset.h  inter_robot_communication.h  layer.h  layered_behaviour_set.h  motivational_behaviour.h  robot.h  robot_interface.h  sensor.h  sensory_evaluator.h  sensory_feedback.h  task.h
alliance/include/nodes/: alliance_event.h  alliance_node.h  alliance_observer.h  alliance_subject.h  high_level_node.h  low_level_node.h  motivation_publishers.h  ros_sensor_message.h
alliance/include/utilities/: continuous_noisy_signal.h  continuous_signal_type.h  discrete_noisy_signal.h  discrete_signal_type.h  enum_converter.h  event.h  has_id.h  has_name.h  interval.h  motivation_plot_generator.h  noisy.h  noisy_duration.h  observer.h  ros_message_converter.h  ros_service_server.h  signal_type.h  signal_types.h  simulation.h  subject.h  toggle_event.h  unary_signal_type.h  utilities.h
alliance/include/utilities/functions/: buffered_function.h  exponential_function.h  function.h  functions.h  linear_function.h  probability_density_function.h  pulse_function.h  sample_holder.h  step_function.h  unary_sample_holder.h  value_change_event.h
alliance/launch/: alliance.launch
alliance/others/uml/: alliance.dia
alliance/src/: high_level.cpp  low_level.cpp
alliance/src/alliance/: acquiescence.cpp  activity_suppression.cpp  behaved_robot.cpp  behaviour_set.cpp  impatience.cpp  impatience_reset.cpp  inter_robot_communication.cpp  layer.cpp  layered_behaviour_set.cpp  motivational_behaviour.cpp  robot.cpp  sensor.cpp  sensory_evaluator.cpp  sensory_feedback.cpp  task.cpp
alliance/src/nodes/: high_level_node.cpp  low_level_node.cpp  motivation_publishers.cpp
alliance/src/utilities/: continuous_noisy_signal.cpp  continuous_signal_type.cpp  discrete_noisy_signal.cpp  discrete_signal_type.cpp  event.cpp  has_name.cpp  motivation_plot_generator.cpp  observer.cpp  signal_types.cpp  simulation.cpp  subject.cpp  toggle_event.cpp  unary_signal_type.cpp
alliance/src/utilities/functions/: probability_density_function.cpp  unary_sample_holder.cpp
alliance/template/: detailed_motivation_template.xml.in  motivation_singleplot_template.xml.in  multiplot_template.xml.in
alliance/test/: utest.cpp
alliance_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
alliance_msgs/msg/: InterRobotCommunication.msg  Motivation.msg  SensoryFeedback.msg
alliance_test/: CMakeLists.txt  alliance_plugins.xml  package.xml  rqt_mrta.xml
alliance_test/config/: layers_alliance_params.yaml  robot1_alliance_params.yaml  robot1_rosaria_params.yaml  robot2_alliance_params.yaml  robot2_rosaria_params.yaml  robot3_alliance_params.yaml  robot3_rosaria_params.yaml  robot4_alliance_params.yaml  robot4_alliance_params.yaml.autosave  robot4_rosaria_params.yaml  robot5_alliance_params.yaml  robot5_rosaria_params.yaml  rosconsole.conf  rqt_multiplot.xml  tasks_alliance_params.yaml  test.yaml
alliance_test/include/alliance_test/: alliance_plugins.h  border_protection.h  layer.h  odometry.h  point_cloud.h  report.h  updated_sensory.h  wander.h
alliance_test/launch/: multiple_robots.launch  rosbag_record.launch  single_robot.launch
alliance_test/map/: map1.map  map2.map  map3.map
alliance_test/src/: alliance_novo.cpp
alliance_test/src/alliance_test/: border_protection.cpp  layer.cpp  odometry.cpp  point_cloud.cpp  report.cpp  updated_sensory.cpp  wander.cpp
rqt_alliance/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
rqt_alliance/src/rqt_alliance/: alliance_plugin.cpp
