<?xml version="1.0"?>
<package>
  <name>alliance</name>
  <version>1.0.0</version>
  <description>This package implements the ALLIANCE multi-robot task allocation architecture.</description>

  <maintainer email="adrianohrl@unifei.edu.br">Adriano Henrique Rossette Leite</maintainer>
  <license>Apache 2.0</license>
  <url type="website">https://github.com/adrianohrl/alliance</url>
  <author email="adrianohrl@unifei.edu.br">Adriano Henrique Rossette Leite</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>alliance_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>alliance_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rqt_mrta</run_depend>

  <export>
    <rqt_mrta architecture="${prefix}/rqt_mrta.xml" />
  </export>
</package>

