<?xml version="1.0"?>
<package>
  <name>alliance_msgs</name>
  <version>0.1.0</version>
  <description>This package contains the definition of the message, service and action files of the alliance stack.</description>

  <maintainer email="adrianohrl@unifei.edu.br">Adriano Henrique Rossette Leite</maintainer>
  <license>Apache 2.0</license>
  <url type="website">https://github.com/adrianohrl/ruler/wiki</url>
  <author email="adrianohrl@unifei.edu.br">Adriano Henrique Rossette Leite</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>

