<?xml version="1.0"?>
<package>
  <name>alliance_test</name>
  <version>1.0.0</version>
  <description>This package test the ALLIANCE multi-robot task allocation archtecture package.</description>

  <maintainer email="adrianohrl@unifei.edu.br">Adriano Henrique Rossette Leite</maintainer>
  <license>Apache 2.0</license>
  <url type="website">https://github.com/adrianohrl/ruler/wiki</url>
  <author email="adrianohrl@unifei.edu.br">Adriano Henrique Rossette Leite</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>alliance</build_depend>
  <build_depend>alliance_msgs</build_depend>
  <build_depend>ruler</build_depend>
  <build_depend>ruler_msgs</build_depend>

  <run_depend>alliance</run_depend>
  <run_depend>alliance_msgs</run_depend>
  <run_depend>ruler</run_depend>
  <run_depend>ruler_msgs</run_depend>

  <export>
    <alliance plugin="${prefix}/alliance_plugins.xml" />
  </export>
</package>

